# tauthy

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierrc  Build.md  README.md  commitlint.config.js  index.html  lint-staged.config.js  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml  feature-request.md  feature_request.yml
.github/workflows/: dependabot.yml  release-draft.yml  release.yml  signal-release.yml  test.yml
scripts/: release.mjs  update.mjs
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  menu.rs
src/components/: About.tsx  AppBar.tsx  AppDebugger.tsx  AppRouter.tsx  Appearance.tsx  Codes.tsx  Create.tsx  Edit.tsx  EntryList.tsx  EntryListItem.tsx  Import.tsx  Language.tsx  List.tsx  ListItem.tsx  ListSection.tsx  ListSubheader.tsx  Main.tsx  Modal.tsx  ProgressBar.tsx  Security.tsx  Settings.tsx  Theme.tsx  Unlock.tsx  Welcome.tsx
src/components/modals/: Icons.tsx  Import.tsx  Language.tsx  Password.tsx  PasswordReset.tsx  QRCode.tsx  Reset.tsx  Theme.tsx
src/context/: index.ts
src/hooks/: index.ts  useEventListener.ts  useHover.ts  useInterval.ts  useLocalStorage.ts  useMediaQuery.ts
src/locales/: index.ts
src/locales/de/: translation.json
src/locales/en/: translation.json
src/locales/es/: translation.json
src/locales/fr/: translation.json
src/styles/: global.ts  theme.ts
src/styles/themes/: black.ts  dark.ts  index.ts  light.ts
src/types/: index.ts
src/utils/: codes.ts  helpers.ts  i18n.ts  index.ts  storage.ts  updater.ts
