[package]
name = "tauthy"
version = "0.2.0"
description = "A cross-platform TOTP authentication client built with tauri"
authors = ["philippwalter@pm.me"]
license = "GPL-3.0 License"
repository = "https://github.com/pwltr/tauthy"
default-run = "tauthy"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
otp = { git = "https://github.com/TimDumol/rust-otp" }
tauri = { version = "1.0.0-rc.6", features = ["clipboard-write-text", "fs-all", "path-all", "shell-open"] }
tauri-plugin-stronghold = { path = "../tauri-plugin-stronghold" }

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
