[package]
name = "tauthy"
version = "0.2.5"
description = "A cross-platform TOTP authentication client built with tauri"
authors = ["philippwalter@pm.me"]
license = "GPL-3.0 License"
repository = "https://github.com/pwltr/tauthy"
default-run = "tauthy"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
otp = { git = "https://github.com/TimDumol/rust-otp" }
tauri = { version = "1.2.4", features = ["clipboard-write-text", "dialog-open", "dialog-save", "fs-all", "path-all", "shell-open", "updater"] }
tauri-plugin-stronghold = { path = "../tauri-plugin-stronghold" }

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
