[package]
name = "tauthy"
version = "0.2.5"
description = "A cross-platform TOTP authentication client built with tauri"
authors = ["philippwalter@pm.me"]
license = "GPL-3.0 License"
repository = "https://github.com/pwltr/tauthy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
otp = { git = "https://github.com/TimDumol/rust-otp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4", features = ["clipboard-write-text", "dialog-open", "dialog-save", "fs-all", "os-all", "path-all", "shell-open", "updater"] }
tauri-plugin-stronghold = { path = "../tauri-plugin-stronghold" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
